--- a/themes/default/templates/auth/user_edit.html
+++ b/themes/default/templates/auth/user_edit.html
@@ -38,6 +38,9 @@
 {% endif %}
     {% csrf_token %}
     {{ form.as_p }}
+    {% if pform %}
+    {{ pform.as_p }}
+    {% endif %}
     <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
 </form>
 {% endblock %}
