Added support for user-based dashboard.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@275 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -16,5 +16,5 @@
 {% endblock %}
 
 {% block main %}
-    {% region "dashboard" %}
+    {% region user.get_profile.dashboard.slug %}
 {% endblock %}
