It's now possible to add personal bookmarks.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@279 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -335,6 +335,14 @@ tr.altrow td { background-color: #f2f2f2; }
     width: 85%;
 }
 
+#bookmarks .add a {
+    margin: 0 10px;
+    padding: 0 5px;
+    border: 1px solid #ce0600;
+}
+
+#bookmarks .add a:hover { border-color: #fff; }
+
 #userarea {
     float: right;
     width: 15%;
