Added base support for adding new widgets to the user's dashboard.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@280 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -16,5 +16,12 @@
 {% endblock %}
 
 {% block main %}
+<div class="actions">
+    <ul>
+        <li class="add"><a href="{% url widget_add %}">{% trans 'Add' %}</a></li>
+    </ul>
+</div>
+<div class="details">
     {% region user.get_profile.dashboard.slug %}
+</div>
 {% endblock %}
