--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -514,6 +514,27 @@ tr.altrow td { background-color: #f2f2f2; }
 
 #main .details { clear: both; }
 
+#main .widget .wrapper {
+    clear: both;
+    float: left;
+    width: 347px;
+    padding: 20px;
+    margin-right: 5px;
+    margin-bottom: 10px;
+    background: #f6f6f6;
+    border: 1px solid #e6e6e6;
+} 
+
+#main .widget .wrapper-altrow {
+    float: right;
+    width: 347px;
+    padding: 20px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    background: #f6f6f6;
+    border: 1px solid #e6e6e6;
+}
+
 #footer {
     height: 200px;
     border-top: 1px solid #111;
