--- a/themes/default/templates/menus/bookmark_list.html
+++ b/themes/default/templates/menus/bookmark_list.html
@@ -24,7 +24,7 @@
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
-        <li class="add"><a href="{% url bookmark_add %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url bookmark_add %}">{% trans 'Add' %}</a></li>
     </ul>
 </div>
 <div class="details">
