--- a/themes/default/templates/projects/project_list.html
+++ b/themes/default/templates/projects/project_list.html
@@ -24,7 +24,7 @@
 <div class="actions">
     <ul>
         {% if perms.projects.add_project %}
-        <li class="add"><a href="{% url project_add %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url project_add %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
