--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -370,6 +370,11 @@ tr.altrow td { background-color: #f2f2f2; }
     text-align: right;
 }
 
+#userarea .profile {
+    border-right: 1px solid #d6d6d6;
+    padding-right: 15px;
+}
+
 #userarea li { text-align: right; }
 
 #breadcrumbs {
