Added prototype of multiple select widget with option add link.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@286 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -132,6 +132,8 @@ form .errors input, form .errors textarea, form .errors select {
     border: 1px solid #d21717;
 }
 
+form .add a { margin-right: 100%; }
+
 /**
  * Tables.
  */
