Added proof of concept of a new "todo" app for managing personal tasks.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@287 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -197,6 +197,7 @@ INSTALLED_APPS = (
     'prometeo.core.registration',
     'prometeo.core.taxonomy',
 
+    #'prometeo.todo',
     #'prometeo.projects',
 )
 
@@ -231,7 +232,9 @@ if DEBUG:
 SEARCH_IN_MODELS = (
     'taxonomy.Category',
     'taxonomy.Tag',
+    #'todo.Task',
     #'projects.Project',
     #'projects.Area',
+    #'projects.Milestone',
     #'projects.Ticket',
 )
