--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -108,20 +108,6 @@ form .submit {
     margin-right: 10px;
 }
 
-form .submit input {
-    display: block;
-    width: auto;
-    padding: 6px 16px;
-    margin: 0;
-    border: none;
-    color: #fff;
-    font-weight: bold;
-    background: #ce0600;
-    border: 1px solid #1f1f1f;
-}
-
-form .submit input:hover { background: #1f1f1f; }
-
 form .required input, form .required textarea, form .required select {
     background-color: #fffecc;
     border: 1px solid #ffda88;
@@ -173,6 +159,20 @@ tr.altrow td { background-color: #f2f2f2; }
  */
 
 .disabled { color: #60625d; }
+
+form .submit input, .submit a {
+    float: right;
+    width: auto;
+    padding: 6px 16px;
+    margin: 0;
+    color: #fff;
+    font-weight: bold;
+    background: #ce0600;
+    border: 1px solid #1f1f1f;
+    text-align: center;
+}
+
+form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 .navigator { float: right; }
 
