Added auto-populate of milestone and areas fields in the "ticket_add" view when the user requests that action from the "milestone_tickets" or "area_tickets" views.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@304 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone_tickets.html
+++ b/themes/default/templates/projects/milestone_tickets.html
@@ -27,7 +27,7 @@
 <div class="actions">
     <ul>
         {% if perms.projects.add_ticket %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url milestone_ticket_add project.slug object.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
