--- a/themes/default/templates/projects/ticket_edit.html
+++ b/themes/default/templates/projects/ticket_edit.html
@@ -36,7 +36,7 @@
 {% if object.pk %}
 <form method="post" action="{% url ticket_edit object.project.slug object.pk %}">
 {% else %}
-<form method="post" action="{% url ticket_add object.project.slug %}">
+<form method="post" action=".">
 {% endif %}
     {% csrf_token %}
     {{ form.as_p }}
