--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -44,9 +44,9 @@
             <td>{% if object.closed %}{{ object.closed }}{% else %}<span class="disabled">{% trans "Empty" %}</span>{% endif %}</td>
         </tr>
         <tr>
-            <th>{% trans "Start" %}:</th>
+            <th>{% trans "Start date" %}:</th>
             <td>{% if object.start %}{{ object.start }}{% else %}<span class="disabled">{% trans "Empty" %}</span>{% endif %}</td>
-            <th>{% trans "End" %}:</th>
+            <th>{% trans "End date" %}:</th>
             <td>{% if object.end %}{{ object.end }}{% else %}<span class="disabled">{% trans "Empty" %}</span>{% endif %}</td>
         </tr>
         <tr>
