--- a/themes/default/templates/todo/task_list.html
+++ b/themes/default/templates/todo/task_list.html
@@ -28,7 +28,27 @@
     </ul>
 </div>
 <div class="details">
-    {% detail_table object_list field_names %}
+    {% regroup object_list by start_date as tasks_by_date %}
+    {% if tasks_by_date %}
+    <dl>
+    {% for date in tasks_by_date %}
+        <dt><h3>{{ date.grouper }}</h3></dt>
+        <dd>
+            <ul>
+            {% for item in date.list %}
+                <li class="task_item">
+                    <strong{% if item.closed %} class="closed"{% endif %}>{{ item.start_time }}</strong>
+                    <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
+                    {% if item.end and not item.closed %}({{ item.end|timeuntil }}){% endif %}
+                </li>
+            {% endfor %}
+            </ul>
+        </dd>
+    {% endfor %}
+    </dl>
+    {% else %}
+    <p class="disabled">{% trans "No results found." %}</p>
+    {% endif %}
     {% include 'elements/paginator.html' %}
 </div>
 {% endblock %}
