Improved dashboard and widgets management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@310 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -582,6 +582,12 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     border: 1px solid #e6e6e6;
 }
 
+#main .widget .actions {
+    position: relative;
+    float: right;
+    top: -36px;
+}
+
 #footer {
     height: 200px;
     border-top: 1px solid #111;
