--- a/themes/default/templates/widgets/widget.html
+++ b/themes/default/templates/widgets/widget.html
@@ -7,6 +7,14 @@
             <h4>{% block widget-title %}{% trans widget.title %}{% endblock %}</h4>
         </div>
         {% endif %}
+        {% if widget.editable %}
+        <div class="actions">
+            <ul>
+                <li class="edit"><a title="{% trans 'Edit' %}"  href="{{ widget.get_edit_url }}">{% trans "Edit" %}</a></li>
+                <li class="delete"><a title="{% trans 'Delete' %}"  href="{{ widget.get_delete_url }}">{% trans "Delete" %}</a></li>
+            </ul>
+        </div>
+        {% endif %}
         {% block widget-body %}
         <div class="body">
             {% block widget-content %}{% trans text %}{% endblock %}
