Added visualization of related tags and categories in the "task_detail" view.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@311 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -50,6 +50,14 @@
             <td>{% if object.end %}{{ object.end }}{% else %}<span class="disabled">{% trans "Empty" %}</span>{% endif %}</td>
         </tr>
         <tr>
+            <th>{% trans "Tags" %}:</th>
+            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Categories" %}:</th>
+            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+        </tr>
+        <tr>
             <th>{% trans "Description" %}:</th>
             <td colspan="3">
                 <div class="entry">
