Added "latest_tasks" and "today_tasks" widgets to the "todo" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@312 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -586,6 +586,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     position: relative;
     float: right;
     top: -36px;
+    margin-bottom: -36px;
 }
 
 #footer {
