--- a/themes/default/templates/todo/task_list.html
+++ b/themes/default/templates/todo/task_list.html
@@ -36,13 +36,13 @@
         <dd>
             <ul>
             {% for item in date.list %}
-                <li{% if item.closed %} class="closed"{% else %}{% if item.expired %} class="expired"{% endif %}{% endif %}>
+                <li{% if item.closed %}{% if item.expired %} class="delayed"{% else %} class="closed"{% endif %}{% else %}{% if item.expired %} class="expired"{% endif %}{% endif %}>
                     <strong>{{ item.start_time }}</strong>
                     <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
                     {% if item.expired %}
                     <span class="delay">({{ item.end|timesince }} {% trans "overdue" %})</span>
                     {% else %}
-                    {% if not item.closed and item.end and item.is_started %}
+                    {% if not item.closed and item.end and item.started %}
                     <span class="countdown">({{ item.end|timeuntil }})</span>
                     {% endif %}
                     {% endif %}
