Added links to "Edit" and "Delete" actions.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@316 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -671,6 +671,13 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin-bottom: -36px;
 }
 
+#main .milestones .actions {
+    position: relative;
+    float: right;
+    top: -22px;
+    margin-bottom: -22px;
+}
+
 #footer {
     height: 200px;
     border-top: 1px solid #111;
