--- a/themes/default/templates/projects/milestone.html
+++ b/themes/default/templates/projects/milestone.html
@@ -2,6 +2,12 @@
 
 <dt{% if object.closed %} class="closed"{% else %}{% if object.expired %} class="expired"{% endif %}{% endif %}>
     <h3><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></h3>
+    <span class="actions">
+        <ul>
+            <li class="edit"><a title="{% trans "Edit" %}" href="{{ object.get_edit_url }}">{% trans "Edit" %}</a></li>
+            <li class="delete"><a title="{% trans "Delete" %}" href="{{ object.get_delete_url }}">{% trans "Delete" %}</a></li>
+        </ul>
+    </span>
 </dt>
 <dd>
     <p class="meta">
