Added permission check.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@317 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone.html
+++ b/themes/default/templates/projects/milestone.html
@@ -4,8 +4,12 @@
     <h3><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></h3>
     <span class="actions">
         <ul>
+            {% if perms.projects.edit_milestone %}
             <li class="edit"><a title="{% trans "Edit" %}" href="{{ object.get_edit_url }}">{% trans "Edit" %}</a></li>
+            {% endif %}
+            {% if perms.projects.delete_milestone %}
             <li class="delete"><a title="{% trans "Delete" %}" href="{{ object.get_delete_url }}">{% trans "Delete" %}</a></li>
+            {% endif %}
         </ul>
     </span>
 </dt>
