--- a/themes/default/templates/projects/entry.html
+++ b/themes/default/templates/projects/entry.html
@@ -1,3 +1,9 @@
+{% load i18n %}
+
 <div class="entry">
+    {% if description %}
     {{ description|safe }}
+    {% else %}
+    <p class="disabled">{% trans "empty" %}</p>
+    {% endif %}
 </div>
