- Improved dashboard management: now it's very easy to add a dashboard to an arbitrary model. - Added dashboard to "Project", "Area" and "Milestone" models.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@319 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/area_detail.html
+++ b/themes/default/templates/projects/area_detail.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load markup %}
 {% load breadcrumbs %}
+{% load region %}
 
 {% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 {% if object.description %}{% block meta_description %}{{ object.description|striptags|capfirst }}{% endblock %}{% endif %}
@@ -91,6 +92,7 @@
             </td>
         </tr>
     </table>
+    {% region object.dashboard %}
 </div>
 {% include "elements/comments.html" %}
 {% endblock %}
