--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load region %}
 
 {% block meta_title %}{{ object.title|striptags|capfirst }}{% endblock %}
 {% if object.description %}{% block meta_description %}{{ object.description|striptags|capfirst }}{% endblock %}{% endif %}
@@ -103,6 +104,7 @@
             </td>
         </tr>
     </table>
+    {% region object.dashboard %}
 </div>
 {% include "elements/comments.html" %}
 {% endblock %}
